<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button1"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button2"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button3"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button4"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button5"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button6"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button7"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button8"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button9"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button10"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button11"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button12"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button13"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button14"
                android:textAlignment="textStart" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/settings_button15"
                android:textAlignment="textStart" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>